# OORT

./: README.md
europa/: .gitignore  BaseApplication.cpp  BaseApplication.h  CMakeLists.txt  Engine  Engine.cpp  Engine.h  Makefile  Makefile.am  Makefile.in  README.md  README.txt  assignment.cc  config.status  description.txt  ogre.cfg  runit.sh
europa/.deps/: Engine-BaseApplication.Po  Engine-Engine.Po  Engine-TutorialApplication.Po
europa/autom4te.cache/: requests
europa/shaders/: mesh2d.frag  mesh2d.vs  triangle.frag
oort/: BaseApplication.cpp  BaseApplication.h  BulletContactCallback.h  Document.txt  FinalProjectReport.txt  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.h  HOW_TO_BUILD  Makefile.am  NetManager.cpp  NetManager.h  OgreMotionState.cpp  README  README.md  Simulator.cpp  Simulator.h  SoundManager.cpp  SoundManager.h  User Manual.txt  configure.ac  create  resources.cfg
oort/Assets/: Material.001.material  Material.002.material  Material.003.material  Wood_bareoak.001.material  Wood_bareoak.material  blue.material  blue_strips.001.material  court.material  custom.particle  leftwall.mesh  paddle-blue.material  rightwall.mesh  wall.material
oort/Assets/Asteroid/: .Asteroid.mesh.xml.swp  Asteroid.mesh  Stone_01.mesh  Stone_01.mesh.xml  Stone_01_LC.mesh  Stone_01_LC.mesh.xml  Stone_01_RC.mesh  Stone_01_RC.mesh.xml  Stone_04.mesh  Stone_04.mesh.xml  Stone_04_LC.mesh  Stone_04_LC.mesh.xml  Stone_04_RC.mesh  Stone_04_RC.mesh.xml  Stone_temp.mesh.xml  StonesMat_01.material
oort/Assets/Asteroid/High/: Material.material
oort/Assets/Asteroid/test/: Stone1.mesh  Stone1.mesh.xml
oort/Assets/Laser/: Laser.material  RectLaser.mesh
oort/Assets/SoundFX/: Sounds.txt
oort/Assets/Spaceship/: Black.material  EP.001.material  EP.material  Emision.material  Glass.material  Mat.material  Mat2.material  Metal.material  Plane.002.mesh  Plane.002.mesh.xml  Plane.003.mesh  Plane.003.mesh.xml  Plane.004.mesh  Plane.004.mesh.xml  Plane.mesh
oort/Assets/meshgen/: savedmesh1  savedmesh1.xml  slicedsavedmesh1  slicedsavedmesh1.xml
oort/Linux-Build-Tools/: Makefile.am  makeit  resources.cfg
oort/Source/Core/: .MeshSlicer.h.swp  Application.cpp  Application.h  Asteroid.cpp  Asteroid.h  Ball.h  CoreConfig.h  GameManager.h  GameObject.cpp  GameObject.h  Laser.cpp  Laser.h  MeshSlicer.cpp  MeshSlicer.h  MultiPlatformHelper.h  OISManager.cpp  OISManager.h  OortApplication.cpp  OortApplication.h  Paddle.cpp  Paddle.h  SceneHelper.h  ScoreManager.cpp  ScoreManager.h  Simulator.cpp  SoundManager.cpp  SoundManager.h  SoundScoreManager.cpp  SoundScoreManager.h  Spaceship.cpp  Spaceship.h  StadiumFlashes.cpp  TextOverlay.cpp  TextOverlay.h  Wall.cpp  Wall.h
oort/media/materials/scripts/: SphereBallMat.material  planeFloorMat.material
oort/media/models/: marbleBall.mesh  woodFloor.mesh
oort/oldcode/: Ball.cpp  Ball.h  GUI.h  Goal.cpp  Goal.h  Paddle.cpp  Paddle.h  Room.cpp  Room.h  ScoreState.h  Surface.cpp  Surface.h  utils.h
oort2/: FinalReport.txt  README.md
oort2/Assets/: ball.material  barrier.mesh  ceiling.mesh  floor.mesh  paddle-blue.mesh  paddle.mesh  stadium-mats.material
oort2/Linux-Build-Tools/: Makefile.am
oort2/Source/Core/: Application.cpp  Application.h  Ball.cpp  GameObject.cpp  GameObject.h  Paddle.h  SceneHelper.h  ScoreManager.cpp  ScoreManager.h  SoundManager.cpp  StadiumFlashes.h
